--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Digital Minds On</title>
+    <title>Digital Minds On | Web & App Development | E-commerce | Graphic Design</title>
     <meta name="description"
-        content="igital Minds On offers expert graphic design and web development services, helping businesses create stunning visuals and build dynamic, user-friendly websites.">
+        content="Digital Minds On offers expert graphic design and web development services, helping businesses create stunning visuals and build dynamic, user-friendly websites.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
@@ -457,7 +457,7 @@
                 <div class="about-section d-flex flex-column align-items-center text-center">
                     <div class="row align-items-center">
                         <div class="col-md-4  aos-init aos-animate">
-                            <img src="assets/img/about/about__3.png" data-tilt
+                            <img src="assets/img/herobaner/herobanner__6.png" data-tilt
                                 style="will-change: transform; transform: perspective(1000px) rotateX(0deg) rotateY(0deg) scale3d(1, 1, 1);"
                                 alt="Healthcare professionals" class="img-fluid">
                         </div>
@@ -1156,8 +1156,8 @@
                                 </h3>
                             </div>
                             <div class="section__title__text">
-                                <p>Sagittis purus sit amet volutpat consequat mauris nunc congue nisi and tortor
-                                    dignissim convallis aenean venenatis urna</p>
+                                <p>Digital Minds On Inspiring testimonials from happy clients who have experienced
+                                    transformative results. Discover how our expertise is making a real difference</p>
                             </div>
                         </div>
                     </div>
@@ -1189,11 +1189,10 @@
                                             <i class="icofont-star star-rating"></i>
                                         </div>
                                         <div class="testimonial__text">
-                                            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                                velit esse.”</p>
+                                            <p>“I’m extremely satisfied with the web development services provided. The
+                                                team delivered a fast, responsive, and visually appealing website that
+                                                meets all my business needs. Communication was seamless, and they were
+                                                always available to address any concerns. Highly recommend!”</p>
                                         </div>
                                         <div class="testimonial__bottom">
                                             <div class="testimonial__author">
@@ -1215,11 +1214,10 @@
                                             <i class="icofont-star star-rating"></i>
                                         </div>
                                         <div class="testimonial__text">
-                                            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                                velit esse.”</p>
+                                            <p>“Working with this team for app development has been a great experience.
+                                                They understood my vision and built a user-friendly, bug-free app that
+                                                functions perfectly. Their expertise in mobile platforms really shines,
+                                                and the support they provide is exceptional.”</p>
                                         </div>
                                         <div class="testimonial__bottom">
                                             <div class="testimonial__author">
@@ -1240,11 +1238,61 @@
                                             <i class="icofont-star star-rating"></i>
                                         </div>
                                         <div class="testimonial__text">
-                                            <p>“Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                                                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-                                                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                                                velit esse.”</p>
+                                            <p>“I had a fantastic experience working with this team for my WordPress
+                                                site development. They built a beautiful, fully functional website with
+                                                all the features I needed. The process was smooth, and they provided
+                                                great guidance on optimizing my site for performance and SEO. Highly
+                                                recommended!”</p>
+                                        </div>
+                                        <div class="testimonial__bottom">
+                                            <div class="testimonial__author">
+                                                <h6><a href="#">Reshma Saujani</a></h6>
+                                                <span>Founder & CEO</span>
+                                            </div>
+                                            <div class="testimonial__small__img">
+                                                <img src="assets/img/testimonial/testimonial__small__img.png" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="testimonial__single__slider swiper-slide">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
+                                        <div class="testimonial__text">
+                                            <p>“The UI/UX design team did an outstanding job revamping my website. They
+                                                focused on creating an intuitive and engaging experience for users,
+                                                enhancing the overall functionality. Their design recommendations were
+                                                on point, resulting in better user retention and improved usability.”
+                                            </p>
+                                        </div>
+                                        <div class="testimonial__bottom">
+                                            <div class="testimonial__author">
+                                                <h6><a href="#">Mattie Warner</a></h6>
+                                                <span>Founder & CEO</span>
+                                            </div>
+                                            <div class="testimonial__small__img">
+                                                <img src="assets/img/testimonial/testimonial__small__img.png" alt="">
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="testimonial__single__slider swiper-slide">
+                                        <div class="star-wrapper s-m-b-8 mb-3">
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                            <i class="icofont-star star-rating"></i>
+                                        </div>
+                                        <div class="testimonial__text">
+                                            <p>“I hired them for building my ecommerce site, and they exceeded
+                                                expectations. The site is easy to navigate, mobile-responsive, and
+                                                integrates smoothly with payment systems. Their attention to detail and
+                                                user-centered approach helped create a platform that truly reflects my
+                                                brand.”</p>
                                         </div>
                                         <div class="testimonial__bottom">
                                             <div class="testimonial__author">
