--- a/itexpert.html
+++ b/itexpert.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Managed IT Network Services Provider | Digital Minds On</title>
+    <title>Managed IT Network Services Provider | Networking Solution | Digital Minds On</title>
     <meta name="description"
         content="Reliable managed IT network services provider offering cost-effective solutions to enhance connectivity, scalability, and performance for your business.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
