--- a/login.html
+++ b/login.html
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Login | DigitalMinds On- Business Consulting HTML Template</title>
+    <meta http-equiv="x-ua-compatible"
+        content="Welcome to Digital Minds On. Please log in to access your account and explore innovative solutions. Your gateway to advanced digital services starts here.">
+    <title>Login | Digital Minds On</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
