--- a/request.html
+++ b/request.html
@@ -2,9 +2,9 @@
 <html class="no-js" lang="zxx">
 
 <head>
-    <meta name="description" content="Digitalminds on">
+    <meta name="description" content="Find details & contact us at our headquarters or any of our regional offices situated across the globe.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Resquest | Digital Minds On- Business Consulting HTML Template</title>
+    <title>Resquest | Get In Touch Today | Digital Minds On</title>
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/logo/icon.svg">
     <!-- Place favicon.ico in the root directory -->
     <!-- CSS here -->
