html tag remove

--- a/blog.html
+++ b/blog.html
@@ -122,6 +122,7 @@
                 </div>
             </div>
         </div>
+        <!-- header start -->
         <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
                 <div class="container desktop__menu__wrapper">
@@ -130,7 +131,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="index.html">
+                                    <a href="index">
                                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
                                             class="dark-mode">
                                         <img src="assets/img/logo/header/logo-local-host new.svg"
@@ -144,44 +145,47 @@
                                         <ul>
                                             <li
                                                 class="headerarea__common__dropdown headerarea__mega__menu position-static">
-                                                <a class="headerarea__has__dropdown" href="index.html">HOME
+                                                <a class="headerarea__has__dropdown" href="index">HOME
                                                 </a>
 
 
                                             </li>
 
                                             <li class="headerarea__common__dropdown"><a
-                                                    class="headerarea__has__dropdown" href="service.html">Services
+                                                    class="headerarea__has__dropdown" href="services">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
                                                 <ul
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
-                                                    <li><a href="webdevelopment.html">Web Development</a></li>
-                                                    <li><a href="software.html">Software Development</a></li>
-                                                    <li><a href="appdevelop.html">App Development</a></li>
-                                                    <li><a href="GameDevelop.html">Game Development</a></li>
-                                                    <li><a href="digtalmarketing.html">Digital Marketing</a></li>
-                                                    <li><a href="uidesign.html">UI/UX Design</a></li>
-                                                    <li><a href="itexpert.html">IT Specialist</a></li>
-                                                    <li><a href="wordpress.html">WordPress Development </a></li>
-                                                    <li><a href="Content_Creater.html">Content Creator</a></li>
-                                                    <li><a href="seo.html">Search Engine Optimization(SEO)</a></li>
+                                                    <li><a href="web-development-services">Web Development</a></li>
+                                                    <li><a href="software-development-services">Software Development</a>
+                                                    </li>
+                                                    <li><a href="mobile-app-development-services">App Development</a>
+                                                    </li>
+                                                    <li><a href="game-development-services">Game Development</a></li>
+                                                    <li><a href="digital-marketing-services">Digital Marketing</a></li>
+                                                    <li><a href="ui-ux-design">UI/UX Design</a></li>
+                                                    <li><a href="network-services">IT Specialist</a></li>
+                                                    <li><a href="wordpress-development-services">WordPress Development
+                                                        </a></li>
+                                                    <li><a href="content-creater">Content Creator</a></li>
+                                                    <li><a href="seo-services">Search Engine Optimization(SEO)</a></li>
 
                                                 </ul>
 
                                             </li>
 
                                             <li><a href="#">Careers </a></li>
-                                            <li><a href="blog.html">BLOG </a></li>
-                                            <li><a href="team.html">Team </a></li>
+                                            <li><a href="blog">BLOG </a></li>
+                                            <li><a href="team">Team </a></li>
 
                                             <li class="headerarea__common__dropdown"><a
-                                                    class="headerarea__has__dropdown" href="contact.html">CONTACT
+                                                    class="headerarea__has__dropdown" href="contact">CONTACT
                                                     <i class="icofont-long-arrow-down"></i></a>
                                                 <ul class="headerarea__submenu headerarea__submenu--five--wrap">
 
-                                                    <li><a href="about.html">ABOUT </a></li>
-                                                    <li><a href="project.html">Portfolio </a></li>
+                                                    <li><a href="about">ABOUT </a></li>
+                                                    <li><a href="project">Portfolio </a></li>
 
                                                 </ul>
 
@@ -194,10 +198,8 @@
                             </div>
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
-
-
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="request.html">GET FREE QUATE</a>
+                                        <a class="default__button" href="quate-request">GET FREE QUATE</a>
                                     </div>
                                 </div>
                             </div>
@@ -220,7 +222,7 @@
                         </a>
                     </div>
                     <div class="mobile__log">
-                        <div class="mobile__log--title"><a class="mobile__log--link" href="index.html">
+                        <div class="mobile__log--title"><a class="mobile__log--link" href="index">
                                 <img class="mobile__log--img" src="assets/img/logo/full-logo.svg" alt="logo-img">
                             </a></div>
                     </div>
@@ -233,63 +235,62 @@
             </div>
         </header>
         <!-- header start -->
-
-
         <!-- Start Offcanvas header menu -->
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
-                    <a class="offcanvas__logo_link" href="index.html">
+                    <a class="offcanvas__logo_link" href="index">
                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
-                        <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo" class="light-mode">
+                        <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
+                            class="light-mode">
                     </a>
                     <button class="offcanvas__close--btn" data-offcanvas>Close</button>
                 </div>
                 <nav class="offcanvas__menu">
                     <ul class="offcanvas__menu_ul">
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="index.html">Home</a>
+                            <a class="offcanvas__menu_item" href="index">Home</a>
                         </li>
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="#">Pages</a>
+                            <a class="offcanvas__menu_item" href="javascript:void(0);">Pages</a>
                             <ul class="offcanvas__sub_menu">
-                                <li class="offcanvas__sub_menu_li"><a href="blog.html"
+                                <li class="offcanvas__sub_menu_li"><a href="blog"
                                         class="offcanvas__sub_menu_item">Blog</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="blog-details.html"
+                                <li class="offcanvas__sub_menu_li"><a href="blog-details"
                                         class="offcanvas__sub_menu_item">Blog Details</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="project.html"
+                                <li class="offcanvas__sub_menu_li"><a href="project"
                                         class="offcanvas__sub_menu_item">Projects</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="project-details.html"
-                                        class="offcanvas__sub_menu_item">Project Details</a></li>
+                                <!-- <li class="offcanvas__sub_menu_li"><a href="project-details.html"
+                                        class="offcanvas__sub_menu_item">Project Details</a></li> -->
                             </ul>
                         </li>
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="service.html">Services</a>
+                            <a class="offcanvas__menu_item" href="services">Services</a>
                             <ul class="offcanvas__sub_menu">
-                                <li class="offcanvas__sub_menu_li"><a href="webdevelopment.html"
+                                <li class="offcanvas__sub_menu_li"><a href="web-development-services"
                                         class="offcanvas__sub_menu_item">Web Development</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="software.html"
+                                <li class="offcanvas__sub_menu_li"><a href="software-development-services"
                                         class="offcanvas__sub_menu_item">Software Development</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="appdevelop.html"
+                                <li class="offcanvas__sub_menu_li"><a href="mobile-app-development-services"
                                         class="offcanvas__sub_menu_item">App Development</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="GameDevelop.html"
+                                <li class="offcanvas__sub_menu_li"><a href="game-development-services"
                                         class="offcanvas__sub_menu_item">Game Development</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="digtalmarketing.html"
+                                <li class="offcanvas__sub_menu_li"><a href="digital-marketing-services"
                                         class="offcanvas__sub_menu_item">Digtal Marketing</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="uidesign.html"
+                                <li class="offcanvas__sub_menu_li"><a href="ui-ux-design"
                                         class="offcanvas__sub_menu_item">UI/UX Designer</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="itexpert.html"
+                                <li class="offcanvas__sub_menu_li"><a href="network-services"
                                         class="offcanvas__sub_menu_item">IT Specialist</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="wordpress.html"
+                                <li class="offcanvas__sub_menu_li"><a href="wordpress-development-services"
                                         class="offcanvas__sub_menu_item">WordPress Development</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="Content_Creater.html"
+                                <li class="offcanvas__sub_menu_li"><a href="content-creater"
                                         class="offcanvas__sub_menu_item">Content Creater</a></li>
-                                <li class="offcanvas__sub_menu_li"><a href="seo.html"
+                                <li class="offcanvas__sub_menu_li"><a href="seo-services"
                                         class="offcanvas__sub_menu_item">Search Engine Optimization(SEO)</a></li>
                             </ul>
                         </li>
-                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="about.html">About</a></li>
-                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="contact.html">Contact</a>
+                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="about">About</a></li>
+                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="contact">Contact</a>
                         </li>
                     </ul>
                 </nav>
