--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
             </div>
         </div>
         <!-- animation end  -->
+
         <!-- header start -->
         <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
@@ -184,13 +185,16 @@
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
                                                     <li><a href="web-development-services">Web Development</a></li>
-                                                    <li><a href="software-development-services">Software Development</a></li>
-                                                    <li><a href="mobile-app-development-services">App Development</a></li>
+                                                    <li><a href="software-development-services">Software Development</a>
+                                                    </li>
+                                                    <li><a href="mobile-app-development-services">App Development</a>
+                                                    </li>
                                                     <li><a href="game-development-services">Game Development</a></li>
                                                     <li><a href="digital-marketing-services">Digital Marketing</a></li>
                                                     <li><a href="ui-ux-design">UI/UX Design</a></li>
                                                     <li><a href="network-services">IT Specialist</a></li>
-                                                    <li><a href="wordpress-development-services">WordPress Development </a></li>
+                                                    <li><a href="wordpress-development-services">WordPress Development
+                                                        </a></li>
                                                     <li><a href="content-creater">Content Creator</a></li>
                                                     <li><a href="seo-services">Search Engine Optimization(SEO)</a></li>
 
@@ -231,7 +235,6 @@
                     </div>
                 </div>
             </div>
-
             <div class="mob_menu_wrapper container-fluid">
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="offcanvas__header--menu__open ">
@@ -254,10 +257,7 @@
 
                 </div>
             </div>
-
-            </div>
         </header>
-        <!-- header start -->
         <!-- Start Offcanvas header menu -->
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
