blog page name change

--- a/blog.html
+++ b/blog.html
@@ -513,7 +513,7 @@
                                         <p class="bg__white"><span class="text__gradient ">08 May, 2024</span></p>
                                     </div>
                                     <div class="blog__4__heading">
-                                        <h6><a href="blog-details.html">A BEGINNER 'S GUIDE...</a></h6>
+                                        <h6><a href="blog-details">A BEGINNER 'S GUIDE...</a></h6>
                                     </div>
                                     <div class="blog__4__text">
                                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -521,7 +521,7 @@
                                             incididunt.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="blog-details.html">READ MORE</a>
+                                        <a class="default__button" href="blog-details">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -543,7 +543,7 @@
                                             incididunt.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button " href="blog-details.html">READ MORE</a>
+                                        <a class="default__button " href="blog-details">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -566,7 +566,7 @@
                                             incididunt.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="blog-details.html">READ MORE</a>
+                                        <a class="default__button" href="blog-details">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -588,7 +588,7 @@
                                             incididunt.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button " href="blog-details.html">READ MORE</a>
+                                        <a class="default__button " href="blog-details">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -611,7 +611,7 @@
                                             incididunt.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button" href="blog-details.html">READ MORE</a>
+                                        <a class="default__button" href="blog-details">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
@@ -633,7 +633,7 @@
                                             incididunt.</p>
                                     </div>
                                     <div class="blog__4__button">
-                                        <a class="default__button " href="blog-details.html">READ MORE</a>
+                                        <a class="default__button " href="blog-details">READ MORE</a>
                                     </div>
                                 </div>
                             </div>
